<resources>
    <string name="app_name">Family Safety</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="SOS_txt">In case of emergency, keep telling family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="guard_txt">Open when you are on a potentially dangerous journey.</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="guard_nav">Guard</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>