<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_bg"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/security"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardElevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/SOS_MAIN_bg"
        app:cardCornerRadius="16dp"
        />
    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:textSize="24sp"
        android:text="@string/sos"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        />
    <TextView
        android:id="@+id/sos_msg"
        android:elevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:textColor="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/SOS_txt"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_img"/>
    <ImageView
        android:id="@+id/sos_img"
        android:elevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        android:src="@drawable/ic_sos"
        android:layout_width="96dp"
        android:layout_height="96dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/green_card"
        app:cardElevation="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/gaurd_bg"
        app:cardCornerRadius="16dp"
        />
    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:textSize="24sp"
        android:text="@string/guard"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        />
    <TextView
        android:id="@+id/guard_msg"
        android:elevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guard_txt"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/guard_img"/>
    <ImageView
        android:id="@+id/guard_img"
        android:elevation="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        android:src="@drawable/ic_guard"
        android:layout_width="96dp"
        android:layout_height="96dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>